--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -13,6 +13,13 @@
     <tbody>
         <tr>
             <td>{{productName}}</td>
+            <td>{{userAge}}</td>
+            <td>{{userNumber}}</td>
+            <td>{{userEmail}}</td>
+            <td>{{userGender}}</td>
+            <td>{{userDepartment}}</td>
+            <td>{{userPincode}}</td>
+            <td>{{userAddress}}</td>
         </tr>
     </tbody>
 </table>
